--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title>Bateria eletrônica</title>
+    <script src="https://kit.fontawesome.com/15ee9f35ec.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
